Fix excess spacing at top of mobile pages

--- a/app/assets/stylesheets/application/modules/atoms/_content.scss
+++ b/app/assets/stylesheets/application/modules/atoms/_content.scss
@@ -4,9 +4,11 @@
 .a-content {
   max-width: 32em;
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 10px 0;
+
   @media #{$from-medium} {
     max-width: 50em;
+    padding: 20px 0;
   }
   @media #{$from-large} {
     max-width: 50em;
@@ -27,7 +29,9 @@
 }
 
 .a-content-top--spacious {
-  margin-top: 80px;
+  @media #{$from-medium} {
+    margin-top: 80px;
+  }
 }
 
 .a-content-narrow {
