--- a/app/assets/stylesheets/application/modules/molecules/_navbar.scss
+++ b/app/assets/stylesheets/application/modules/molecules/_navbar.scss
@@ -1,7 +1,9 @@
 // Bar itself, logo and nav items are its children
 
 header {
-  margin-bottom: 50px;
+  @media #{$from-medium} {
+    margin-bottom: 50px;
+  }
 }
 
 .m-navbar--mobile {
